--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img class="cloud_3" , src="images/cloud_3.png" alt="cloud">
 
         <div class="introduction">
-            <h1 class="title">Hi, I'm X-Monitor</h1>
+            <h1 class="title">Hi, I'm X-Monitor (in github)</h1>
             <h3>For Smart Shopping</h3>
         </div>
         <img class="berg1" src="images/berg.png" alt="berg1">
